--- a/resume_screening/static/styles/styles.css
+++ b/resume_screening/static/styles/styles.css
@@ -45,18 +45,20 @@ main {
     max-width: 600px;
 }
 
-.cta-button {
+button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #5c6bc0;
+    background-color: #71a4b6;
     color: white;
     text-decoration: none;
     border-radius: 5px;
     margin-top: 20px;
+    cursor: pointer;
+    font-size: medium;
 }
 
-.cta-button:hover {
-    background-color: #3f51b5;
+button:hover {
+    background-color: #188181;
 }
 
 footer {
@@ -71,4 +73,129 @@ footer {
 
 .logo h1{
     color: #FFFFFF;
+}
+
+
+
+
+
+
+h1 {
+	text-align: center;
+	margin-top: 50px;
+	font-size: 36px;
+}
+
+
+
+.container {
+	width: 100%;
+	margin: 0 auto;
+}
+
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+th,
+td {
+	padding: 15px;
+	text-align: left;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	vertical-align: middle;
+}
+
+th {
+	background-color: #71a4b6;
+	color: white;
+	font-weight: 500;
+}
+
+tr:nth-child(even) {
+	background-color: #f9f9f9;
+}
+
+tr:hover {
+	background-color: #f1f1f1;
+}
+
+td {
+	max-width: 200px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+
+.pagination {
+	margin-top: 20px;
+	text-align: center;
+}
+
+.pagination a {
+	margin: 0 5px;
+	padding: 8px 12px;
+	background-color: #71a4b6;
+	color: white;
+	text-decoration: none;
+	border-radius: 5px;
+}
+
+.pagination a:hover {
+	background-color: #188181;
+	color: white;
+}
+
+body a {
+	color: #71a4b6;
+	text-decoration: none;
+}
+
+body a:hover {
+	color: #188181;
+}
+
+button[disabled] {
+    background-color: #ccc !important;
+    cursor: not-allowed;
+}
+
+.table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+    border-radius: 8px;
+    -webkit-overflow-scrolling: touch;
+}
+
+.responsive-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.responsive-table th, .responsive-table td {
+    padding: 10px;
+    text-align: left;
+    border: 1px solid #ddd;
+}
+
+input {
+    height: 24px;
+    border-radius: 4px;
+    padding: 4px 0 2px 7px;
+    border: 1px solid #949090;
+}
+
+input[type="file"] {
+    border: 0px;
+}
+
+select {
+    height: 33px;
+    padding: 4px 0px 3px 5px;
+}
+
+section {
+	margin-bottom: 42px;
+	padding-bottom: 28px;
 }
