added chat assistant UI

--- a/resume_screening/templates/resume_screening/base.html
+++ b/resume_screening/templates/resume_screening/base.html
@@ -23,6 +23,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/upload">Upload Resume</a></li>
                 <li><a href="/view-resumes">View Resume</a></li>
+                <li><a href="/chat-assistant">Chat Assistant</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </nav>
