--- a/resume_screening/templates/resume_screening/upload_page.html
+++ b/resume_screening/templates/resume_screening/upload_page.html
@@ -92,7 +92,7 @@
             method: 'POST',
             body: formData,
             headers: {
-                'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value  // CSRF token
+                'X-CSRFToken': document.querySelector('[name=csrfmiddlewaretoken]').value
             }
         })
         .then(response => response.json())
