--- a/resume_screening/static/styles/view_resumes.css
+++ b/resume_screening/static/styles/view_resumes.css
@@ -46,6 +46,16 @@
 	background-color: #188181;
 }
 
+.button {
+	background-color: #71a4b6;
+	color: white;
+	border-radius: 5px;
+}
+
+.button:hover {
+	background-color: #188181;
+}
+
 .overlay {
 	position: fixed;
 	top: 0;
