--- a/resume_screening/templates/resume_screening/home.html
+++ b/resume_screening/templates/resume_screening/home.html
@@ -8,4 +8,8 @@
         <p>Our AI-powered tool helps you screen resumes efficiently and effectively. Get started by uploading your resume!</p>
         <a href="/upload" class="cta-button">Upload Your Resume</a>
     </section>
+
+    <section class="intro chart-section">
+        {% include 'resume_screening/dashboard.html' %}
+    </section>
 {% endblock %}
