--- a/resume_screening/templates/resume_screening/upload_page.html
+++ b/resume_screening/templates/resume_screening/upload_page.html
@@ -112,9 +112,9 @@
                         <td><input type="email" name="email_${index}" value="${resume.email}" required></td>
                         <td><input type="text" name="phone_${index}" value="${resume.phone}" required></td>
                         <td><input type="text" name="applied_for_${index}" value="${resume.applied_for}"></td>
-                        <td><input type="number" name="current_ctc${index}" step="0.1" min="0" value="${resume.experience}"></td>
-                        <td><input type="number" name="expected_ctc${index}" step="0.1" min="0" value="${resume.current_ctc}"></td>
-                        <td><input type="number" name="experience_${index}" step="0.1" min="0" value="${resume.expected_ctc}"></td>
+                        <td><input type="number" name="experience_${index}" step="0.1" min="0" value="${resume.experience}"></td>
+                        <td><input type="number" name="current_ctc_${index}" step="0.1" min="0" value="${resume.current_ctc}"></td>
+                        <td><input type="number" name="expected_ctc_${index}" step="0.1" min="0" value="${resume.expected_ctc}"></td>
                         <td><textarea name="recruiter_feedback_${index}"></textarea></td>
                         <td>
                             <select name="hiring_status_${index}">
