--- a/resume_screening/templates/resume_screening/view_resumes.html
+++ b/resume_screening/templates/resume_screening/view_resumes.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Resume Screening Tool{% endblock %}
+{% block title %}View Resume{% endblock %}
 
 {% block style %}
 <link href="{% static 'styles/view_resumes.css' %}" rel="stylesheet">
