--- a/resume_screening/templates/resume_screening/home.html
+++ b/resume_screening/templates/resume_screening/home.html
@@ -1,4 +1,4 @@
-{% extends 'resume_screening/base.html' %}  <!-- Extend the base.html template -->
+{% extends 'resume_screening/base.html' %}
 
 {% block title %} Resume Screening Tool{% endblock %}
 
