--- a/resume_screening/static/styles/styles.css
+++ b/resume_screening/static/styles/styles.css
@@ -77,13 +77,24 @@ footer {
     bottom: 0;
 }
 
+.logo {
+    display: ruby;
+}
+
 .logo h1{
     color: #FFFFFF;
 }
 
+h2, h3 {
+    color: #174949;
+}
 
-
-
+#emoji {
+  width: 34px;
+  height: auto;
+  position: relative;
+  display: block;
+}
 
 
 h1 {
@@ -91,7 +102,6 @@ h1 {
 	margin-top: 50px;
 	font-size: 36px;
 }
-
 
 
 .container {
