--- a/resume_screening/static/styles/view_resumes.css
+++ b/resume_screening/static/styles/view_resumes.css
@@ -10,7 +10,7 @@
 
 .see-more-content {
 	display: none;
-	background-color: rgb(255 255 255 / 80%);
+	background-color: rgb(255 255 255 / 100%);
 	color: #000000;
 	position: fixed;
 	top: 50%;
@@ -61,4 +61,62 @@
 	bottom: 0;
 	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 999;
+}
+
+.modal {
+    align-content: center;
+    display: none;
+    justify-items: anchor-center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80%;
+    max-width: 70%;
+}
+
+.close-btn {
+    color: #aaa;
+    font-size: 50px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+}
+
+.edit-input {
+    width: 60%;
+}
+
+.header-text{
+    margin-top: 0px;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.edit-btn {
+    background-color: transparent;
+    color: #71a4b6;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.edit-btn:hover {
+    background-color: transparent;
+    color: #174949;
 }
