--- a/resume_screening/templates/resume_screening/base.html
+++ b/resume_screening/templates/resume_screening/base.html
@@ -5,18 +5,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml;utf8,<svg fill='%23000000' version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 795.035 795.035' xml:space='preserve'><g id='SVGRepo_bgCarrier' stroke-width='0'></g><g id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'></g><g id='SVGRepo_iconCarrier'><g><path d='M0,647.589c0,49.892,40.588,90.479,90.479,90.479h20.108h552.079h40.211h41.895v-40.212h-41.895V597.322h41.895v-17.594h20.104h30.16v-40.212h-30.16V438.989h30.16v-40.211h-30.16h-2.513v-13.395v-20.107v-0.863l-49.647-92.992h52.161v-54.073L633.665,56.968H170.738L51.356,245.075c-20.417,16.612-33.76,41.625-33.76,69.935c0,49.581,40.114,89.89,89.593,90.383c-33.291,13.372-56.922,45.847-56.922,83.864c0,27.604,12.688,52.046,32.242,68.656C36.395,562.022,0,600.426,0,647.589z M57.806,315.01c0-18.75,10.429-34.946,25.686-43.586h599.278v93.854H108.074C80.359,365.276,57.806,342.72,57.806,315.01z M140.747,438.991h20.106h563.809v100.526H160.853h-20.106c-27.715,0-50.268-22.541-50.268-50.26C90.48,461.53,113.032,438.991,140.747,438.991z M90.48,597.322h20.108h552.079v100.533h-552.08H90.479c-27.713,0-50.265-22.541-50.265-50.267C40.214,619.862,62.767,597.322,90.48,597.322z'></path></g></g></svg>" sizes="any" type="image/svg+xml" />
+
     {% block meta %}{% endblock %}
     <title>{% block title %} | Resume Screening Tool{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
     {% block style %}{% endblock %}
 
-
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
 </head>
 <body class="base-body">
     <header>
         <div class="logo">
+            <svg viewBox="0 0 60 60" id="emoji" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="color"> <path fill="#FFFFFF" stroke="none" d="M61.7754,24.6733H14.1634c-6.1765,3.0412-0.9202,8.7233-0.9202,8.7233s-4.9227,4.5487-0.2522,8.6632 c-1.6977,3.0229-2.6689,5.0042-1.112,7.5619l25.8,6.909l24.0963-5.8538V24.6733z"></path> <polygon fill="#D22F27" stroke="none" points="14.0703,24.4681 37.6357,18.221 60.9068,24.5451 60.9195,24.5914 37.6357,30.9156"></polygon> <line x1="37.6357" x2="60.9068" y1="18.221" y2="24.5451" fill="#FFFFFF" stroke="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="37.6357" x2="14.0703" y1="18.221" y2="24.4681" fill="#FFFFFF" stroke="none" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> </g> <g id="hair"></g> <g id="skin"></g> <g id="skin-shadow"></g> <g id="line"> <line x1="15.9466" x2="37.6357" y1="24.8179" y2="30.9156" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="37.6357" x2="12.7413" y1="39.1118" y2="32.5173" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="37.6357" x2="60.9068" y1="18.221" y2="24.5451" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="60.9195" x2="37.6357" y1="24.5914" y2="30.9156" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="37.6357" x2="14.0703" y1="18.221" y2="24.4681" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="60.9195" x2="37.6357" y1="32.7877" y2="39.1118" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <path fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="M13.3847,32.6831c-1.8468-0.5568-2.8025-2.8039-2.1346-5.0192c0.6679-2.2153,2.7064-3.5598,4.5532-3.003"></path> <line x1="37.6357" x2="12.7413" y1="47.8205" y2="41.226" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="60.9195" x2="37.6357" y1="41.4964" y2="47.8205" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <path fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="M13.3847,41.3918c-1.8468-0.5568-2.8025-2.8039-2.1346-5.0192c0.6679-2.2153,2.7064-3.5598,4.5532-3.003"></path> <line x1="37.679" x2="12.7846" y1="56.5306" y2="49.9361" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <line x1="60.9628" x2="37.679" y1="50.2065" y2="56.5306" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"></line> <path fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="M13.4281,50.1019c-1.8468-0.5568-2.8025-2.8039-2.1346-5.0192c0.6679-2.2153,2.7064-3.5598,4.5532-3.003"></path> </g> </g></svg>
             <h1>Resume Screening Tool</h1>
         </div>
         <nav>
@@ -33,8 +35,6 @@
     <main>
         {% block content %}{% endblock %}
     </main>
-
-
 
     {% block scripts %}{% endblock %}
 </body>
