--- a/resume_screening/templates/resume_screening/view_resumes.html
+++ b/resume_screening/templates/resume_screening/view_resumes.html
@@ -13,18 +13,49 @@
     <div class="container">
         <h2>Uploaded Resumes</h2>
 
+         <div class="search-bar">
+            <input type="text" id="search-input" value="{{ request.GET.search }}" placeholder="Enter name, email, phone, skill to search">
+            <button onclick="searchResumes()">Search</button>
+             <button onclick="clearSearch()">Clear</button>
+        </div>
+
         {% if page_obj.object_list %}
         <div class="table-wrapper">
             <table>
                 <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone</th>
-                    <th>Skills</th>
-                    <th>Experience</th>
-                    <th>Current CTC</th>
-                    <th>Expected CTC</th>
+                    <th class="sortable">
+                        <a href="?sort=name&order={% if sort_column == 'name' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+                            Name
+                            <span class="{% if sort_order == 'asc' %}asc-arrow{% else %}desc-arrow{% endif %}"></span>
+                        </a>
+                    </th>
+                    <th class="">
+                        Email
+
+                    </th>
+                    <th class="">
+                        Phone
+
+                    </th>
+                    <th class="sortable">
+                        <a href="?sort=experience&order={% if sort_column == 'experience' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+                            Experience
+                            <span class="{% if sort_order == 'asc' %}asc-arrow{% else %}desc-arrow{% endif %}"></span>
+                        </a>
+                    </th>
+                    <th class="sortable">
+                        <a href="?sort=current_ctc&order={% if sort_column == 'current_ctc' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+                            Current CTC
+                            <span class="{% if sort_order == 'asc' %}asc-arrow{% else %}desc-arrow{% endif %}"></span>
+                        </a>
+                    </th>
+                    <th class="sortable">
+                        <a href="?sort=expected_ctc&order={% if sort_column == 'expected_ctc' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+                            Expected CTC
+                            <span class="{% if sort_order == 'asc' %}asc-arrow{% else %}desc-arrow{% endif %}"></span>
+                        </a>
+                    </th>
                     <th>Education</th>
                     <th>Resume File</th>
                 </tr>
@@ -35,19 +66,24 @@
                     <td>{{ resume.name }}</td>
                     <td>{{ resume.email }}</td>
                     <td>{{ resume.phone }}</td>
-                    <td>{{ resume.skills|join:', ' }}</td>
                     <td>{{ resume.experience }}</td>
                     <td>{{ resume.current_ctc }}</td>
                     <td>{{ resume.expected_ctc }}</td>
                     <td>
                         {% if resume.education|length > 50 %}
-                        {{ resume.education|slice:":50" }}... <br/><span class="see-more-btn"                                                                          data-content="{{ resume.education }}">See More</span>
+                        {{ resume.education|slice:":50" }}... <br/><span class="see-more-btn"
+                                                                         data-content="{{ resume.education }}">See More</span>
                         {% else %}
                         {{ resume.education }}
                         {% endif %}
                     </td>
                     <td>
-                        <button class="edit-btn" data-id="{{ resume.resume_id }}" data-name="{{ resume.name }}" data-email="{{ resume.email }}" data-phone="{{ resume.phone }}" data-skills="{{ resume.skills|join:', ' }}" data-experience="{{ resume.experience }}" data-ctc="{{ resume.current_ctc }}" data-education="{{ resume.education }}" data-applied-for="{{ resume.applied_for }}">Edit</button>
+                        <button class="edit-btn" data-id="{{ resume.resume_id }}" data-name="{{ resume.name }}"
+                                data-email="{{ resume.email }}" data-phone="{{ resume.phone }}"
+                                data-skills="{{ resume.skills|join:', ' }}" data-experience="{{ resume.experience }}"
+                                data-current-ctc="{{ resume.current_ctc }}" data-expected-ctc="{{ resume.expected_ctc }}" data-education="{{ resume.education }}"
+                                data-applied-for="{{ resume.applied_for }}">Edit
+                        </button>
                         <a href="{{ MEDIA_URL }}resume/{{ resume.resume_file }}" target="_blank">Download</a>
                     </td>
                 </tr>
@@ -58,13 +94,15 @@
 
         <div class="pagination">
             {% if page_obj.has_previous %}
-            <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            <a href="?page=1{% if search_query %}&search={{ search_query }}{% endif %}{% if sort_column %}&sort={{ sort_column }}{% endif %}{% if sort_order %}&order={{ sort_order }}{% endif %}">&laquo;
+                first</a>
+            <a href="?page={{ page_obj.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}{% if sort_column %}&sort={{ sort_column }}{% endif %}{% if sort_order %}&order={{ sort_order }}{% endif %}">previous</a>
             {% endif %}
             <span class="current-page">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
             {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            <a href="?page={{ page_obj.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}{% if sort_column %}&sort={{ sort_column }}{% endif %}{% if sort_order %}&order={{ sort_order }}{% endif %}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}{% if search_query %}&search={{ search_query }}{% endif %}{% if sort_column %}&sort={{ sort_column }}{% endif %}{% if sort_order %}&order={{ sort_order }}{% endif %}">last
+                &raquo;</a>
             {% endif %}
         </div>
 
@@ -106,11 +144,15 @@
                 </tr>
                 <tr>
                     <td><label for="edit-experience">Experience</label></td>
-                    <td><input type="number" id="edit-experience" name="experience" class="edit-input"></td>
+                    <td><input type="number" step="0.1" id="edit-experience" name="experience" class="edit-input"></td>
                 </tr>
                 <tr>
-                    <td><label for="edit-ctc">Current CTC</label></td>
-                    <td><input type="number" id="edit-ctc" name="current_ctc" class="edit-input"></td>
+                    <td><label for="edit-current-ctc">Current CTC</label></td>
+                    <td><input type="number" step="0.1" id="edit-current-ctc" name="current_ctc" class="edit-input"></td>
+                </tr>
+                <tr>
+                    <td><label for="edit-expected-ctc">Expected CTC</label></td>
+                    <td><input type="number" step="0.1" id="edit-expected-ctc" name="expected_ctc" class="edit-input"></td>
                 </tr>
                 <tr>
                     <td><label for="edit-education">Education</label></td>
@@ -125,7 +167,6 @@
         </form>
     </div>
 </div>
-
 
 
 <div class="overlay" id="overlay" style="display: none;" onclick="closeModal()"></div>
@@ -160,7 +201,8 @@
             const phone = this.getAttribute('data-phone');
             const skills = this.getAttribute('data-skills');
             const experience = this.getAttribute('data-experience');
-            const ctc = this.getAttribute('data-ctc');
+            const currentCtc = this.getAttribute('data-current-ctc');
+            const expectedCtc = this.getAttribute('data-expected-ctc');
             const education = this.getAttribute('data-education');
             const appliedFor = this.getAttribute('data-applied-for');
 
@@ -171,7 +213,8 @@
             document.getElementById('edit-phone').value = phone;
             document.getElementById('edit-skills').value = skills;
             document.getElementById('edit-experience').value = experience;
-            document.getElementById('edit-ctc').value = ctc;
+            document.getElementById('edit-current-ctc').value = currentCtc;
+            document.getElementById('edit-expected-ctc').value = expectedCtc;
             document.getElementById('edit-education').value = education;
             document.getElementById('edit-applied-for').value = appliedFor;
 
@@ -207,5 +250,35 @@
             alert('Error occurred!');
         });
     });
+
+    // used to search records
+     function searchResumes() {
+        var searchQuery = document.getElementById('search-input').value;
+        var url = window.location.pathname;
+
+        var urlParams = new URLSearchParams(window.location.search);
+        if (searchQuery) {
+            urlParams.set('search', searchQuery); // Update search parameter if present
+        } else {
+            urlParams.delete('search'); // Remove search parameter if the input is empty
+        }
+
+        var newQueryString = urlParams.toString();
+
+        // Reload the page with the updated query string
+        window.location.search = newQueryString;
+    }
+
+    // searches when user press enter
+    document.getElementById('search-input').addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+            searchResumes();  // Call searchResumes when Enter key is pressed
+        }
+    });
+
+     function clearSearch() {
+        var url = window.location.pathname;
+        window.location.search = '';  // Remove search query from URL
+    }
 </script>
 {% endblock %}
